# universal-llm

./: .gitignore  README.md  TOOLCALLS.md  cabal.project  universal-llm.cabal
examples/: ClaudeExample.hs  LlamaCppExample.hs  SimpleExample.hs
examples/claude/: Main.hs
examples/helper/Common/: HTTP.hs
examples/llama-cpp/: Main.hs
examples/simple/: Main.hs
proxy/: Main.hs  MainAnthropic.hs  README.md
proxy/Proxy/: OpenAICompat.hs
src/: UniversalLLM.hs
src/UniversalLLM/: Models.hs  ProviderM.hs  SchemaCoercion.hs  Serialization.hs  Settings.hs  Tools.hs
src/UniversalLLM/Core/: ProviderM.hs  Serialization.hs  Settings.hs  Tools.hs  Types.hs
src/UniversalLLM/Models/: Anthropic.hs  BasicModel.hs  Claude35Sonnet.hs  FullFeaturedModel.hs  GLM.hs  GPT4o.hs  KimiK25.hs  MODEL-NAMING.md  MinimaxM25.hs  OpenRouter.hs  Qwen.hs  SimpleModel.hs
src/UniversalLLM/Models/Alibaba/: Qwen.hs
src/UniversalLLM/Models/Amazon/: Nova.hs
src/UniversalLLM/Models/Anthropic/: Claude.hs
src/UniversalLLM/Models/Google/: Gemini.hs
src/UniversalLLM/Models/Minimax/: M.hs
src/UniversalLLM/Models/Moonshot/: Kimi.hs
src/UniversalLLM/Models/OpenAI/: GPT.hs
src/UniversalLLM/Models/ZhipuAI/: GLM.hs
src/UniversalLLM/Protocols/: Anthropic.hs  OpenAI.hs
src/UniversalLLM/Protocols/Anthropic/: Delta.hs
src/UniversalLLM/Protocols/OpenAI/: Delta.hs
src/UniversalLLM/Providers/: Anthropic.hs  OpenAI.hs  XMLToolCalls.hs
src/UniversalLLM/ToolCall/: XML.hs
test/: AnthropicComposableSpec.hs  AnthropicProviderSpec.hs  AnthropicStreamingSpec.hs  AnthropicStreamingThinkingSpec.hs  AnthropicTransportSpec.hs  CachedIntegrationSpec.hs  CompletionSpec.hs  ComposableHandlersSpec.hs  ComposableProviderTests.hs  CoreTypesSpec.hs  DeltaSpec.hs  ErrorClassifier.hs  GGUFNames.hs  Main.hs  ModelRegistry.hs  Nova2DebugSpec.hs  OpenAIComposableSpec.hs  OpenAIProtocolSpec.hs  OpenAIProviderSpec.hs  OpenAIStreamingSpec.hs  PropertySpec.hs  ReasoningConfigSpec.hs  StandardTests.hs  StreamingReconstructionSpec.hs  TestCache.hs  TestFixtures.hs  TestHTTP.hs  TestHelpers.hs  TestModels.hs  TestProviders.hs  ToolDefinitionIntegrationSpec.hs  ToolsSpec.hs  XMLPropertySpec.hs  XMLProvidersSpec.hs
test/Models/: Claude.hs  GLM.hs  GLM45Air.hs  Gemini3Flash.hs  KimiK25.hs  MinimaxM25.hs  Nova2Lite.hs  Qwen3Coder.hs
test/Models/Alibaba/: Qwen.hs  Qwen35.hs  Qwen3Coder.hs
test/Models/Amazon/: Nova2Lite.hs
test/Models/Anthropic/: Claude.hs
test/Models/Google/: Gemini.hs  Gemini3Flash.hs
test/Models/Minimax/: MinimaxM25.hs
test/Models/Moonshot/: KimiK25.hs
test/Models/OpenAI/: GPT.hs  GPT53.hs  GPT54.hs  GPTOSS.hs
test/Models/ZhipuAI/: GLM.hs
test/Protocol/: Anthropic.hs  AnthropicOAuthBlacklist.hs  AnthropicTests.hs  CacheCoherency.hs  OpenAI.hs  OpenAITests.hs
