cabal-version: 3.0
name: universal-llm
version: 0.1.0.0
synopsis: Type-safe universal interface for Large Language Model APIs
description:
  A Haskell library providing a type-safe, capability-based interface
  for multiple LLM providers (OpenAI, Anthropic, etc.) with compile-time
  feature validation and runtime emulation support.

license: MIT
author: Your Name
maintainer: your.email@example.com
category: AI, Machine Learning
build-type: Simple

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: shared-properties
  exposed-modules:
    UniversalLLM
    UniversalLLM.Core.Types
    UniversalLLM.Core.Tools
    UniversalLLM.Core.Serialization
    UniversalLLM.Core.ProviderM
    UniversalLLM.Core.Settings
    UniversalLLM.Models.SimpleModel
    UniversalLLM.Models.FullFeaturedModel
    UniversalLLM.Protocols.OpenAI
    UniversalLLM.Protocols.Anthropic
    UniversalLLM.Providers.OpenAI
    UniversalLLM.Providers.Anthropic
    UniversalLLM.Providers.XMLToolCalls
    UniversalLLM.ToolCall.XML

  hs-source-dirs: src

  build-depends:
    base >= 4.16 && < 5,
    autodocodec >= 0.2 && < 1,
    autodocodec-schema >= 0.2 && < 1,
    text >= 1.2 && < 3,
    aeson,
    bytestring,
    hashable,
    vector,
    transformers,
    mtl,
    data-default,
    containers

library examples-helper
  import: shared-properties
  exposed-modules:
    Common.HTTP

  hs-source-dirs: examples/helper

  build-depends:
    base >= 4.16 && < 5,
    universal-llm,
    text >= 1.2 && < 3,
    aeson,
    autodocodec >= 0.2 && < 1,
    http-conduit,
    case-insensitive,
    transformers

test-suite universal-llm-tests
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -Wno-name-shadowing -Wno-x-partial -Wno-orphans -Wno-unused-imports -Wno-unused-local-binds -Wno-unused-top-binds
  other-modules:
    ComposableHandlersSpec
    OpenAIComposableSpec
    OpenAIStreamingSpec
    AnthropicComposableSpec
    AnthropicStreamingSpec
    PropertySpec
    XMLPropertySpec
    XMLProvidersSpec
    CoreTypesSpec
    ToolDefinitionIntegrationSpec
    CompletionSpec
    ToolsSpec
    TestModels
    TestCache
    TestHTTP
    TestHelpers
    CachedIntegrationSpec
    ModelRegistry
    StandardTests
    ReasoningConfigSpec
    Protocol.OpenAI
    Protocol.OpenAITests
    Models.GLM45Air
    Models.Qwen3Coder
    Models.Gemini3Flash
    Models.Nova2Lite
  hs-source-dirs: test

  build-depends:
    base,
    universal-llm,
    hspec >= 2.7 && < 3,
    QuickCheck >= 2.14 && < 3,
    aeson,
    text,
    bytestring,
    autodocodec,
    cryptohash-sha256,
    base16-bytestring,
    directory,
    filepath,
    temporary,
    http-conduit,
    case-insensitive,
    vector,
    data-default,
    containers,
    exceptions

executable simple-example
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: examples/simple

  build-depends:
    base,
    universal-llm,
    text

executable llama-cpp-example
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: examples/llama-cpp

  build-depends:
    base,
    universal-llm,
    examples-helper,
    text,
    aeson,
    autodocodec,
    autodocodec-schema,
    time,
    transformers

executable claude-example
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: examples/claude

  build-depends:
    base,
    universal-llm,
    examples-helper,
    text,
    aeson,
    autodocodec,
    autodocodec-schema,
    time,
    transformers

executable llm-proxy
  import: shared-properties
  main-is: Main.hs
  other-modules:
    Proxy.OpenAICompat
  hs-source-dirs: proxy

  build-depends:
    base,
    universal-llm,
    text,
    aeson,
    autodocodec,
    bytestring,
    warp >= 3.3 && < 4,
    wai >= 3.2 && < 4,
    http-types >= 0.12 && < 1,
    http-conduit,
    case-insensitive,
    transformers

executable llm-proxy-anthropic
  import: shared-properties
  main-is: MainAnthropic.hs
  other-modules:
    Proxy.OpenAICompat
  hs-source-dirs: proxy

  build-depends:
    base,
    universal-llm,
    text,
    aeson,
    autodocodec,
    bytestring,
    warp >= 3.3 && < 4,
    wai >= 3.2 && < 4,
    http-types >= 0.12 && < 1,
    http-conduit,
    case-insensitive,
    transformers